force-app/main/default/objects/NAICS_Industry_Code__c/NAICS_Industry_Code__c.object-meta.xml
<CustomObject>
    <label>NAICS Industry Code</label>
    <nameField>
        <label>NAICS Industry Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAICS Industry Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>