force-app/main/default/objects/NAICS_Industry_Code__c/fields/Appetite__c.field-meta.xml
<CustomField>
    <fullName>Appetite__c</fullName>
    <label>Appetite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>