force-app/main/default/objects/NAICS_Industry_Code__c/fields/NAICS_Code_Group__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Group__c</fullName>
    <label>NAICS Code Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>