force-app/main/default/objects/NAICS_Industry_Code__c/fields/NAICS_Code_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Group_Description__c</fullName>
    <label>NAICS Code Group Description</label>
    <type>TextArea</type>
</CustomField>