force-app/main/default/objects/NAICS_Industry_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NAICS_Code_Group__c</columns>
    <columns>NAICS_Code_Group_Description__c</columns>
    <columns>Appetite__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>